Adding jenkins running container on ansible.

--- a/ansible/playbook-work-station.yml
+++ b/ansible/playbook-work-station.yml
@@ -1,5 +1,7 @@
 ---
-- hosts: localhost
+
+- name: Provision workstation Playbook
+  hosts: localhost
   connection: local
   sudo: True
   vars_files: 
