Adding new task on autoprovision role.

--- a/ansible/playbook-work-station.yml
+++ b/ansible/playbook-work-station.yml
@@ -1,13 +1,12 @@
 ---
 
-- name: Provision workstation Playbook
-  hosts: localhost
+- hosts: localhost
   connection: local
-  sudo: True
+  become: true
   vars_files: 
     - variables.yml
-  tasks: 
-    - name: Install packages
-      include_role:
-        name: autoprovision
+  tasks:
+  - name: autoprovision
+    include_role:
+      name: autoprovision
   
