Adding final version of role Autoprovision.

--- a/ansible/roles/autoprovision/tasks/install_packages.yml
+++ b/ansible/roles/autoprovision/tasks/install_packages.yml
@@ -1,9 +1,9 @@
 - name: Install packages for bastion
   apt:
-    name: "{{package}}"
+    name: "{{item}}"
   loop: "{{install.packages}}"
 
 - name: Install pip packages
   pip:
-    name: "{{package}}"
+    name: "{{item}}"
   loop: "{{install.pip}}"
