--- a/ansible/roles/autoprovision/tasks/jenkins_image.yml
+++ b/ansible/roles/autoprovision/tasks/jenkins_image.yml
@@ -1,15 +1,12 @@
 - name: get jenkins image
   docker_image:
-    name: "{{image}}"
+    name: "jenkinsci/blueocean"
     source: pull
-  loop: "{{docker_image.image}}"
 
 - name: running jenkins container
   docker_container:
     name: jenkins
-    image: "{{docker_image.image}}"
+    image: "jenkinsci/blueocean"
     state: started
     ports:
       - "8080:8080"
-
-  
