--- a/ansible/roles/autoprovision/tasks/install_packages.yml
+++ b/ansible/roles/autoprovision/tasks/install_packages.yml
@@ -1,9 +1,9 @@
 - name: Install packages for bastion
   apt:
     name: "{{item}}"
-  loop: "{{install.packages}}"
+  loop: "{{install.localhost.packages}}"
 
 - name: Install pip packages
   pip:
     name: "{{item}}"
-  loop: "{{install.pip}}"
+  loop: "{{install.localhost.pip}}"
