Adding kubespray repo on ansible.

--- a/ansible/variables.yml
+++ b/ansible/variables.yml
@@ -23,3 +23,6 @@ terraform_version: "0.12.20"
 terraform_url: "https://releases.hashicorp.com/terraform/{{terraform_version}}/terraform_{{terraform_version}}_linux_amd64.zip"
 terraform_directory: "/opt/terraform"
 terraform_zip: "/tmp/terraform.zip"
+
+kubespray_git: "https://github.com/kubernetes-incubator/kubespray.git"
+kubespray_dir: "/home/ubuntu/"
