--- a/ansible/roles/autoprovision/tasks/main.yml
+++ b/ansible/roles/autoprovision/tasks/main.yml
@@ -1,3 +1,4 @@
 - include_tasks: install_packages.yml
 - include_tasks: jenkins_image.yml
 - include_tasks: install_terraform.yml
+- include_tasks: kubespray_repo.yml
