--- a/ansible/roles/auto_scaling_instance/tasks/install_packages.yml
+++ b/ansible/roles/auto_scaling_instance/tasks/install_packages.yml
@@ -3,3 +3,9 @@
     name: "{{item}}"
     update_cache: yes
   loop: "{{install.auto_scaling_instances.packages}}"
+
+- name: Install pip packages for slave
+  pip:
+    name: "{{item}}"
+  loop: "{{install.auto_scaling_instances.pip}}"
+
