--- a/ansible/roles/autoprovision/tasks/jenkins_image.yml
+++ b/ansible/roles/autoprovision/tasks/jenkins_image.yml
@@ -3,10 +3,20 @@
     name: "jenkinsci/blueocean"
     source: pull
 
+- name: Create dir for volume
+  file:
+    path: "/opt/jenkins/data"
+    state: directory
+    mode: 0777
+    owner: root
+
 - name: running jenkins container
   docker_container:
     name: jenkins
     image: "jenkinsci/blueocean"
     state: started
+    volumes:
+      - "/opt/jenkins/data:/var/jenkins_home/"
     ports:
       - "8080:8080"
+      - "50000:50000"
